initially installing firebase data base

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="utf-8">
     <title>The library</title>
     <link rel="stylesheet" href="styles.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet">
+   
+<script src="https://www.gstatic.com/firebasejs/7.21.0/firebase.js" defer></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+ 
     <script src="main.js" defer></script>
   </head>
   <header>
